# pyxon-ai-entry-task

./: .env.example  .gitignore  PR_DESCRIPTION.md  README.md  pyproject.toml  requirements.txt
benchmarks/: conftest.py  test_arabic.py  test_chunking.py  test_graph_rag.py  test_performance.py  test_raptor.py  test_retrieval.py
demo/: app.py
demo/sample_docs/: sample.txt  sample_arabic.txt
scripts/: run_benchmarks.py
src/: __init__.py  embeddings.py  pipeline.py
src/graphs/: __init__.py  ingest_graph.py  rag_graph.py  state.py
src/parser/: __init__.py  analyzer.py  chunkers.py
src/parser/extractors/: __init__.py  docx_extractor.py  pdf_extractor.py  txt_extractor.py
src/rag/: __init__.py  graph_rag.py  raptor.py
src/storage/: __init__.py  sql_store.py  vector_store.py
